--- a/index.html
+++ b/index.html
@@ -4,22 +4,38 @@
   <meta charset="UTF-8" />
   <title>QXDM_PDSCH_MCS</title>
   <style>
-  
-    body { font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; }
-    textarea { width: 100%; height: 300px; font-family: monospace; }
-    button { margin-top: 10px; padding: 10px 20px; font-size: 16px; }
-    .table-group { margin-bottom: 30px; }
-    h4 { margin-bottom: 5px; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      line-height: 1.6;
+    }
+    textarea {
+      width: 100%;
+      height: 300px;
+      font-family: monospace;
+    }
+    button {
+      margin-top: 10px;
+      padding: 10px 20px;
+      font-size: 16px;
+    }
+    .table-group {
+      margin-bottom: 30px;
+    }
+    h4 {
+      margin-bottom: 5px;
+    }
     table {
       border-collapse: collapse;
-      width: 100%;
       background: #fff;
       margin-bottom: 10px;
+      width: auto;
     }
     th, td {
       border: 1px solid #ccc;
-      padding: 6px 12px;
+      padding: 4px 8px;
       text-align: center;
+      white-space: nowrap;
     }
     th {
       background-color: #e8e8e8;
@@ -28,12 +44,16 @@
 </head>
 <body>
   <h2>QXDM_PDSCH_MCS</h2>
-	<p style="margin: 0;">Author: Dustin_Chen, email: <a href="mailto:Dustin_Chen@compal.com" style="line-height: 1;">Dustin_Chen@compal.com</a> or <a href="mailto:chuhpsdustin@gmail.com" style="line-height: 1;">chuhpsdustin@gmail.com</a></p>
+  <p style="margin: 0;">Author: Dustin_Chen, email: 
+    <a href="mailto:Dustin_Chen@compal.com" style="line-height: 1;">Dustin_Chen@compal.com</a> or 
+    <a href="mailto:chuhpsdustin@gmail.com" style="line-height: 1;">chuhpsdustin@gmail.com</a>
+  </p>
   <p>How to use: <br>
-  1. QXDM Options->Parsing Options->Export Parsed Text和QCAT Format勾起來，<br>
-  2. filter 出 [0xB887]	NR5G MAC PDSCH Status，<br>
-  3. 把多行Log直接ctrl+C複製，貼到底下，<br>
-  4. 按下Parse，就會擷取第 18, 20, 21, 22, 28 欄位：MCS, RV, HARQ Id, RNTI Type, CRC Status</p>
+    1. QXDM Options-&gt;Parsing Options-&gt;Export Parsed Text 和 QCAT Format 勾起來，<br>
+    2. filter 出 [0xB887] NR5G MAC PDSCH Status，<br>
+    3. 把多行 Log 直接 ctrl+C 複製，貼到底下，<br>
+    4. 按下 Parse，就會擷取第 13, 4, 2, 18, 19, 20, 21, 22, 28 欄位：PCI, Frame, Slot, MCS, Rbs, RV, HARQ Id, RNTI Type, CRC Status
+  </p>
   <textarea id="logInput" placeholder="請貼上多行 log，每行以 | 分隔..."></textarea>
   <button onclick="parseLogs()">Parse</button>
   <h3>結果：</h3>
@@ -58,23 +78,26 @@
 
         const cols = trimmed.split('|').map(x => x.trim()).filter(x => x.length > 0);
         if (cols.length >= 28) {
-          const mcs = cols[17];      // 第18欄，index17
-          const rv  = cols[19];      // 第20欄，index19
-          const harq = cols[20];     // 第21欄，index20
-          const rnti = cols[21];     // 第22欄，index21
-          const crc = cols[27];      // 第28欄，index27
+          const pci = cols[12];      // 新增 PCI
+          const frame = cols[3];
+          const slot = cols[1];
+          const mcs = cols[17];
+          const rbs = cols[18];
+          const rv  = cols[19];
+          const harq = cols[20];
+          const rnti = cols[21];
+          const crc = cols[27];
 
-          // 過濾無效或標頭欄位
           if (['MCS', 'CRC'].includes(mcs) || ['Bypass', 'Type', 'Id'].includes(harq) || ['Bypass', 'Type', 'Id'].includes(rnti) || ['Did', 'Status'].includes(crc)) continue;
 
           const key = `${rnti}_${harq}`;
           if (!groupedResults[key]) groupedResults[key] = [];
-          groupedResults[key].push({ mcs, rv, harq, rnti, crc });
+          groupedResults[key].push({ pci, frame, slot, mcs, rbs, rv, harq, rnti, crc });
         }
       }
 
       const container = document.getElementById('output');
-      container.innerHTML = ''; // 清空上次結果
+      container.innerHTML = '';
 
       if (Object.keys(groupedResults).length === 0) {
         container.textContent = '❌ 沒有找到有效資料，請確認輸入格式是否正確（每行須以 | 開頭且至少 28 欄）';
@@ -98,7 +121,11 @@
         const thead = document.createElement('thead');
         thead.innerHTML = `
           <tr>
+            <th>PCI</th>
+            <th>Frame</th>
+            <th>Slot</th>
             <th>MCS</th>
+            <th>Rbs</th>
             <th>RV</th>
             <th>HARQ Id</th>
             <th>RNTI Type</th>
@@ -111,7 +138,11 @@
         for (const entry of group) {
           const row = document.createElement('tr');
           row.innerHTML = `
+            <td>${entry.pci}</td>
+            <td>${entry.frame}</td>
+            <td>${entry.slot}</td>
             <td>${entry.mcs}</td>
+            <td>${entry.rbs}</td>
             <td>${entry.rv}</td>
             <td>${entry.harq}</td>
             <td>${entry.rnti}</td>
