--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         '0': 'C_RNTI',
         '1': 'T_C_RNTI',
         '2': 'SI_RNTI',
+        '4': 'P_RNTI',
         '8': 'RA_RNTI'
       };
 
