--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       width: 100%;
       height: 300px;
       font-family: monospace;
+      white-space: pre;   /* 保留換行和空白，不自動斷行 */
+      overflow-x: auto;   /* 水平捲軸 */
+      overflow-y: auto;   /* 垂直捲軸 */
     }
     button {
       margin-top: 10px;
@@ -54,7 +57,24 @@
     3. 把多行 Log 直接 ctrl+C 複製，貼到底下，<br>
     4. 按下 Parse，就會擷取第 13, 4, 2, 18, 19, 20, 21, 22, 28 欄位：PCI, Frame, Slot, MCS, Rbs, RV, HARQ Id, RNTI Type, CRC Status
   </p>
-  <textarea id="logInput" placeholder="請貼上多行 log，每行以 | 分隔..."></textarea>
+  <textarea id="logInput" placeholder="貼上QXDM複製的內容如下
+22:32:37.979376	[0xB887]	NR5G MAC PDSCH Status
+Major.Minor = 2. 5
+Log Fields Change BMask = 0x0
+Sub ID = 0
+Num Records = 2
+Records
+   ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+   |   |                     |      |PDSCH Status Info                                                                                                                                                                                                                                                                             |
+   |   |                     |      |       |    |      |    |         |    |       |        |        |     |        |   |   |    |  |HARQ |    |    |   |      |         |        |      |    |   |       |      |      |    |       |       |       |       |      |     |        |     |        |       |       |       |       |
+   |   |                     |      |       |    |      |    |         |    |       |        |        |     |        |   |   |    |  |Or   |    |K1  |   |      |         |        |      |    |   |       |      |      |    |       |       |       |       |      |     |        |     |        |RX     |RX     |RX     |RX     |
+   |   |                     |Num   |       |    |      |    |         |    |       |        |        |     |        |   |   |    |  |MBSFN|    |Or  |   |      |         |        |      |New |   |       |      |      |    |HD     |HARQ   |HD     |HARQ   |      |Is   |        |High |        |Antenna|Antenna|Antenna|Antenna|
+   |   |System Time          |PDSCH |Carrier|Tech|      |Conn|         |Band|Variant|Physical|        |TB   |        |SCS|   |Num |  |Area |RNTI|PMCH|   |Num   |Iteration|CRC     |CRC   |Tx  |   |Discard|Bypass|Bypass|Num |Onload |Onload |Offload|Offload|Did   |IOVec|        |Clock|        |Mapping|Mapping|Mapping|Mapping|
+   |#  |Slot|Numerology|Frame|Status|ID     |Id  |Opcode|ID  |Bandwidth|Type|Id     |cell ID |EARFCN  |Index|TB Size |MU |MCS|Rbs |RV|Id   |Type|ID  |TCI|Layers|Index    |State   |Status|Flag|NDI|Mode   |Decode|HARQ  |ReTx|Timeout|Timeout|Timeout|Timeout|Recomb|Valid|Mod Type|Mode |Num RX  |0      |1      |2      |3      |
+   ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+   |  0|   0|     30kHz|  226|     1|      0|   1|     0|   0|       12|   0|      0|     186|  644736|    0|     177|  1|  5|  16| 0|    0|   0|   4|  0|     1|        0|    PASS|  PASS|   1|  1|      0|     0|     0|   0|      0|      0|      0|      0|     0| true|    QPSK|    0|4x4_MIMO|      0|      0|      0|      0|
+   |  1|   1|     30kHz|  226|     1|      0|   1|     0|   0|       12|   0|      0|     186|  644736|    0|     253|  1|  5|  22| 0|    1|   0|   7|  0|     1|        0|    PASS|  PASS|   1|  1|      0|     0|     0|   0|      0|      0|      0|      0|     0| true|    QPSK|    0|4x4_MIMO|      0|      0|      0|      0|
+  "></textarea>
   <button onclick="parseLogs()">Parse</button>
   <h3>結果：</h3>
   <div id="output"></div>
